# prominence-delineator

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: example.ipynb  utils.py
src/prominence_delineator/: __init__.py  prominence_delineator.py
